Post review Weinig fix-ups https://bugs.webkit.org/show_bug.cgi?id=189288

Reviewed by Sam Weinig.

Fix-ups from https://bugs.webkit.org/show_bug.cgi?id=189252

Source/WebCore:

* platform/MIMETypeRegistry.cpp:
(WebCore::MIMETypeRegistry::getSystemPreviewMIMETypes):
(WebCore::initializeSystemPreviewMIMETypes): Deleted.
* rendering/RenderThemeIOS.mm:
(WebCore::arKitBundle):
(WebCore::loadARKitPDFPage):
(WebCore::systemPreviewLogo):

Source/WebKit:

* UIProcess/Cocoa/SystemPreviewControllerCocoa.mm:
(-[_WKPreviewControllerDataSource previewController:previewItemAtIndex:]):
(getUTIForMIMEType): Deleted.
* UIProcess/ios/WKSystemPreviewView.mm:
(getUTIForSystemPreviewMIMEType):
(-[WKSystemPreviewView web_setContentProviderData:suggestedFilename:]):
(getUTIForMIMEType): Deleted.

Canonical link: https://commits.webkit.org/204287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235651 268f45cc-cd09-0410-ab3c-d52691b4dbfc