Source/WebCore/platform/MIMETypeRegistry.cpp
@@ -64,10 +64,6 @@ static HashSet<String, ASCIICaseInsensitiveHash>* supportedMediaMIMETypes;
 static HashSet<String, ASCIICaseInsensitiveHash>* pdfMIMETypes;
 static HashSet<String, ASCIICaseInsensitiveHash>* unsupportedTextMIMETypes;
 
-#if USE(SYSTEM_PREVIEW)
-static HashSet<String, ASCIICaseInsensitiveHash>* systemPreviewMIMETypes;
-#endif
-
 static void initializeSupportedImageMIMETypes()
 {
     supportedImageResourceMIMETypes = new HashSet<String, ASCIICaseInsensitiveHash>;
@@ -705,26 +701,16 @@ const String& defaultMIMEType()
 }
 
 #if USE(SYSTEM_PREVIEW)
-static void initializeSystemPreviewMIMETypes()
+const HashSet<String, ASCIICaseInsensitiveHash>& MIMETypeRegistry::getSystemPreviewMIMETypes()
 {
-    const char* const types[] = {
+    static NeverDestroyed<HashSet<String, ASCIICaseInsensitiveHash>> systemPreviewMIMETypes = std::initializer_list<String> {
         // The official type: https://www.iana.org/assignments/media-types/model/vnd.usdz+zip
         "model/vnd.usdz+zip",
         // Unofficial, but supported because we documented them.
         "model/usd",
         "model/vnd.pixar.usd"
     };
-
-    systemPreviewMIMETypes = new HashSet<String, ASCIICaseInsensitiveHash>;
-    for (auto& type : types)
-        systemPreviewMIMETypes->add(type);
-}
-
-const HashSet<String, ASCIICaseInsensitiveHash>& MIMETypeRegistry::getSystemPreviewMIMETypes()
-{
-    if (!systemPreviewMIMETypes)
-        initializeSystemPreviewMIMETypes();
-    return *systemPreviewMIMETypes;
+    return systemPreviewMIMETypes;
 }
 
 bool MIMETypeRegistry::isSystemPreviewMIMEType(const String& mimeType)
