Source/WebKit/UIProcess/Cocoa/SystemPreviewControllerCocoa.mm
@@ -42,18 +42,6 @@ SOFT_LINK_FRAMEWORK(QuickLook)
 SOFT_LINK_CLASS(QuickLook, QLPreviewController);
 SOFT_LINK_CLASS(QuickLook, QLItem);
 
-// FIXME: At the moment we only have one supported UTI, but
-// if we start supporting more types, then we'll need a table.
-static String getUTIForMIMEType(const String& mimeType)
-{
-    static const NeverDestroyed<String> uti = adoptCF(UTTypeCreatePreferredIdentifierForTag(kUTTagClassFilenameExtension, CFSTR("usdz"), nil)).get();
-
-    if (!WebCore::MIMETypeRegistry::isSystemPreviewMIMEType(mimeType))
-        return emptyString();
-
-    return uti;
-}
-
 @interface _WKPreviewControllerDataSource : NSObject <QLPreviewControllerDataSource> {
     RetainPtr<NSItemProvider> _itemProvider;
     RetainPtr<QLItem> _item;
@@ -95,8 +83,10 @@ static String getUTIForMIMEType(const String& mimeType)
 
     _itemProvider = adoptNS([[NSItemProvider alloc] init]);
     // FIXME: We are launching the preview controller before getting a response from the resource, which
-    // means we don't actually know the real MIME type yet. Assume it is one of those that we registered.
-    NSString *contentType = getUTIForMIMEType(*WebCore::MIMETypeRegistry::getSystemPreviewMIMETypes().begin());
+    // means we don't actually know the real MIME type yet.
+    // FIXME: At the moment we only have one supported UTI, but if we start supporting more types,
+    // then we'll need a table.
+    static NSString *contentType = (__bridge NSString *) UTTypeCreatePreferredIdentifierForTag(kUTTagClassFilenameExtension, CFSTR("usdz"), nil);
 
     _item = adoptNS([allocQLItemInstance() initWithPreviewItemProvider:_itemProvider.get() contentType:contentType previewTitle:@"Preview" fileSize:@(0)]);
     [_item setUseLoadingTimeout:NO];
